[package]
name = "count_sort"
version = "0.1.4"
authors = ["Alex Williams <hughaw64@gmail.com>"]
edition = "2018"
description = "O(n) sorting library for large datasets with small range of possible values"
homepage = "https://github.com/mkb2091/count-sort"
repository  = "https://github.com/mkb2091/count-sort"
license = "MIT"
keywords = ["sort", "sorting"]
categories = ["algorithms"]
readme = "README.md"

[dependencies]

[dev-dependencies]
rand = "0.6"
criterion = "0.2"

[[bench]]
name = "benchmarks"
harness = false
